2004-12-22  Andras Varga

	* csimplemodule.cc: "scheduleAt(): not owner of message" error message
	(and similar messages from send() and sendDirect()) changed to
	something hopefully more intuitive for users. One of the following
	messages will be displayed:
	- "scheduleAt(): message (class)msgname is currently scheduled,
	  use cancelEvent() before rescheduling";
	-  "scheduleAt(): cannot schedule message (class)msgname: it is
	  currently scheduled as self-message for ANOTHER module";
	- "scheduleAt(): cannot schedule message (class)msgname: it is
	  "currently in scheduled-events, being underway between two modules";
	- "scheduleAt(): cannot schedule message (class)msgname: it is
	  currently contained/owned by (...)...".

2004-12-19  Andras Varga

	* cstruct.cc: added baseclassname, baseclassdesc

2004-12-16  Andras Varga

	* cgate.cc, cmodule.cc: removed ev.getDisplayString() and support
	for display strings in omnetpp.ini (section [DisplayStrings])

	* optimizations

2004-12-10  Andras Varga

	* csimulation.cc: implemented getUniqueNumber()

2004-12-08  Andras Varga

	* cpar.cc: read(): invoke new ev.getParameterUseDefault() function

2004-11-27  Andras Varga

	* nearly all .cc files: forEach() methods ported to cVisitor, see
	include/ChangeLog

2004-11-23  Andras Varga

	* cchannel.cc: parameter "disabled" of cSimpleChannel made to work

	* cgate.cc: info() string improved

	* cmodule.cc: displayStringAsParent() renamed to backgroundDisplay-
	String()

	* cchannel.cc: cSimpleChannel renamed to cBasicChannel

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-08  Andras Varga

	* cmodule.cc: fix: checkInternalConnections() reported error on zero-
	size gate vectors too

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-27  Andras Varga

        * checked in MersenneTwister.h v1.0 (15 May 2003) from Richard J.Wagner
        rjwagner@writeme.com; code is under the BSD license.